Bug 409217 - Error message appears when you click on the blue link to open a just saved screenshot if the file name contains a space
Summary: Error message appears when you click on the blue link to open a just saved sc...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-26 16:45 UTC by Patrick Silva
Modified: 2019-06-28 15:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-06-26 16:45:00 UTC
STEPS TO REPRODUCE
1. press printscreen key to open Spectacle
2. Make sure "Quit after save or copy" option is unchecked
3. click on "save as" button, type a file name containing a space and press enter
(a green bar saying "The screenshot was saved as filename.jpg" appears)
4. click on the filename (blue link) to open the just saved screenshot.

OBSERVED RESULT
an error message shows up:
"Unable to run the command specified. The file or folder /home/username/screenshot%20name.jpg does not exist."

EXPECTED RESULT
no error message

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.60.0
Qt Version: 5.12.3
Comment 1 David Redondo 2019-06-27 13:21:10 UTC
Git commit 3dd84c1c8a80af749e2294b31378109fc15172d2 by David Redondo.
Committed on 27/06/2019 at 13:21.
Pushed by davidre into branch 'master'.

Use full URL in message widget link  when a file is saved

Summary:
Otherwise filenames containing spaces can't be openend.

Test Plan:
- Save a file with it's name containing spaces.
- Click on the link.
- The image is opened in your image viewer.

Reviewers: #spectacle, broulik

Reviewed By: broulik

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D22120

M  +1    -1    src/Gui/KSMainWindow.cpp

https://commits.kde.org/spectacle/3dd84c1c8a80af749e2294b31378109fc15172d2