Use full URL in message widget link  when a file is saved

Summary:
Otherwise filenames containing spaces can't be openend.
BUG: 409217

Test Plan:
- Save a file with it's name containing spaces.
- Click on the link.
- The image is opened in your image viewer.

Reviewers: #spectacle, broulik

Reviewed By: broulik

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D22120